# basic_application

./: README.md
sample_BB/: README.md  setup.cfg  setup.py  uninstall.sh
sample_BB/src/bb/: __init__.py  main.py
sample_BB/src/sample_BB/: __main__.py  main.py
sample_app/: README.md
sample_app/Nextflow/: NextFlow.nf  launch.sh
sample_app/PyCOMPSs/: app.py  clean.sh  launch.sh
sample_app/Snakemake/: Snakefile  launch.sh
sample_app/config/: conf.yaml
