[metadata]
name = sample_BB
version = 0.0.1
author = PerMedCoE Project
author_email = infoPerMedCoE@bsc.es
description = This package provides the a sample Building Block.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PerMedCoE/basic_application
project_urls =
    Bug Tracker = https://github.com/PerMedCoE/basic_application/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires = permedcoe>=0.0.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    sample_BB = bb.__main__:main